--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "King Malvin session",
+    "name": "Mudasir king",
     "description": "A session generator platform for all WA bot, Created by Malvin King jux to simplify your digital lives",
     "logo": "https://telegra.ph/file/dc73e16b9988c7c56b56f.jpg",
     "repository": "https://github.com/kingmalvn/malvin.session",
