--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "scripts": {
     "start": "node index.js"
   },
-  "author": "kingmalvn",
+  "author": "SahilKing71",
   "license": "MIT license",
   "dependencies": {
     "@whiskeysockets/baileys": "^6.5.0",
